Регистрация и улучшение системы логина

--- a/Project/Views/UserControls/AuthUserControl/LoginUserControl.xaml
+++ b/Project/Views/UserControls/AuthUserControl/LoginUserControl.xaml
@@ -48,7 +48,7 @@
                 Grid.Column="2"
                 Content="Register"
                 Margin="5"
-                Command=""/>
+                Command="{Binding OpenRegisterUserFormCommand}"/>
 
 
 
