--- a/Project/Views/UserControls/AuthUserControl/RegisterUserControl.xaml
+++ b/Project/Views/UserControls/AuthUserControl/RegisterUserControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Project.Views.UserControls.AuthUserControl.LoggedUserControl"
+﻿<UserControl x:Class="Project.Views.UserControls.AuthUserControl.RegisterUserControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -18,30 +18,56 @@
         <Grid.RowDefinitions>
             <RowDefinition/>
             <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
         </Grid.RowDefinitions>
 
         <TextBlock Grid.Row="0" 
                    Grid.Column="0" 
-                   Text="Имя" />
+                   Text="Login" />
 
         <TextBlock Grid.Row="1"
                    Grid.Column="0"
+                   Text="Password"/>
+
+        <TextBlock Grid.Row="2" 
+                   Grid.Column="0" 
+                   Text="Имя" />
+
+        <TextBlock Grid.Row="3"
+                   Grid.Column="0"
                    Text="Фамилия"/>
 
-        <TextBlock Grid.Row="0" 
-                   Grid.Column="1" 
-                   Text="{Binding User.FirstName}" />
+        <TextBox Grid.Row="0"
+                 Grid.Column="1"
+                 Text="{Binding RegisterRequest.Username}"/>
 
-        <TextBlock Grid.Row="1"
-                   Grid.Column="1"
-                   Text="{Binding User.LastName}"/>
+        <TextBox Grid.Row="1"
+                 Grid.Column="1"
+                 Text="{Binding RegisterRequest.Password}"/>
+
+        <TextBox Grid.Row="2"
+                 Grid.Column="1"
+                 Text="{Binding RegisterRequest.FirstName}"/>
+
+        <TextBox Grid.Row="3"
+                 Grid.Column="1"
+                 Text="{Binding RegisterRequest.LastName}"/>
 
         <Button Style="{DynamicResource MaterialDesignRaisedAccentButton}"
                 Grid.Row="0"
                 Grid.Column="2"
                 Grid.RowSpan="2"
-                Content="Выйти"
+                Content="Зарегистрировать"
                 Margin="5"
-                Command="{Binding ExitUserFormCommand}"/>
+                Command="{Binding RegisterNewUserFormCommand}"/>
+
+        <Button Style="{DynamicResource MaterialDesignRaisedAccentButton}"
+                Grid.Row="2"
+                Grid.Column="2"
+                Grid.RowSpan="2"
+                Content="Отмена"
+                Margin="5"
+                Command="{Binding ReturnToLoginUserFormCommand}"/>
     </Grid>
 </UserControl>
