--- a/Project/Views/UserControls/TestUserControls/Gravel/WeakGrainsGravelTestUserControl.xaml
+++ b/Project/Views/UserControls/TestUserControls/Gravel/WeakGrainsGravelTestUserControl.xaml
@@ -1,11 +1,11 @@
-﻿<UserControl x:Class="Project.Views.UserControls.TestUserControls.Soil.MoistureSoilTestUC"
+﻿<UserControl x:Class="Project.Views.UserControls.TestUserControls.Gravel.WeakGrainsGravelTestUserControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:vm="clr-namespace:Project.ViewModels"
              d:DataContext="{d:DesignInstance vm:MainWindowViewModel, IsDesignTimeCreatable=True}"
-             xmlns:local="clr-namespace:Project.Views.UserControls.TestUserControls.Soil"
+             xmlns:local="clr-namespace:Project.Views.UserControls.TestUserControls.Gravel"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
@@ -55,29 +55,29 @@
 
         <TextBox Grid.Row="0" 
                  Grid.Column="1" 
-                 Text="{Binding MoistureSoilTest.TestNumber}"/>
+                 Text="{Binding WeakGrainsGravelTest.TestNumber}"/>
         
         <TextBox Grid.Row="1" 
                  Grid.Column="1" 
-                 Text="{Binding MoistureSoilTest.MaterialName}"/>
+                 Text="{Binding WeakGrainsGravelTest.MaterialName}"/>
         
         <TextBox Grid.Row="2" 
                  Grid.Column="1" 
-                 Text="{Binding MoistureSoilTest.DateTest}"/>
+                 Text="{Binding WeakGrainsGravelTest.DateTest}"/>
         
         <TextBox Grid.Row="3" 
                  Grid.Column="1" 
-                 Text="{Binding MoistureSoilTest.DocumentTest}"/>
+                 Text="{Binding WeakGrainsGravelTest.DocumentTest}"/>
         
         <TextBlock Grid.Row="5" 
                    Grid.Column="1" 
-                   Text="{Binding MoistureSoilTest.Customer.Title}" 
+                   Text="{Binding WeakGrainsGravelTest.Customer.Title}" 
                    Height="45" 
                    VerticalAlignment="Center"/>
         
         <TextBlock Grid.Row="6" 
                    Grid.Column="1" 
-                   Text="{Binding MoistureSoilTest.Customer.ContractNumber}"/>
+                   Text="{Binding WeakGrainsGravelTest.Customer.ContractNumber}"/>
 
         <Button Style="{DynamicResource MaterialDesignRaisedAccentButton}" 
                 Grid.Row="4" 
@@ -89,42 +89,34 @@
 
         <TextBlock Grid.Row="0" 
                    Grid.Column="2" 
-                   Text="{Binding MoistureSoilTest.SoilWetMassWithBox.DimensionName}"/>
-        
+                   Text="{Binding WeakGrainsGravelTest.GravelMass.DimensionName}"/>
+
         <TextBlock Grid.Row="1" 
                    Grid.Column="2" 
-                   Text="{Binding MoistureSoilTest.SoilDryMassWithBox.DimensionName}"/>
-        
-        <TextBlock Grid.Row="2" 
-                   Grid.Column="2" 
-                   Text="{Binding MoistureSoilTest.BoxMass.DimensionName}"/>
-        
+                   Text="{Binding WeakGrainsGravelTest.GravelWeakGrainsMass.DimensionName}"/>
+
         <TextBlock Grid.Row="3" 
                    Grid.Column="2" 
-                   Text="{Binding MoistureSoilTest.Moisture.DimensionName}"/>
+                   Text="{Binding WeakGrainsGravelTest.GravelWeakGrains.DimensionName}"/>
         
         <TextBox Grid.Row="0" 
                  Grid.Column="3" 
-                 Text="{Binding MoistureSoilTest.SoilWetMassWithBox.DimensionValue}"/>
-        
+                 Text="{Binding WeakGrainsGravelTest.GravelMass.DimensionValue}"/>
+
         <TextBox Grid.Row="1" 
                  Grid.Column="3" 
-                 Text="{Binding MoistureSoilTest.SoilDryMassWithBox.DimensionValue}"/>
-        
-        <TextBox Grid.Row="2" 
-                 Grid.Column="3" 
-                 Text="{Binding MoistureSoilTest.BoxMass.DimensionValue}"/>
-        
+                 Text="{Binding WeakGrainsGravelTest.GravelWeakGrainsMass.DimensionValue}"/>
+
         <TextBlock Grid.Row="3" 
                    Grid.Column="3" 
-                   Text="{Binding MoistureSoilTest.Moisture.DimensionValue}"/>
+                   Text="{Binding WeakGrainsGravelTest.GravelWeakGrains.DimensionValue}"/>
         
         <Button Style="{DynamicResource MaterialDesignRaisedAccentButton}" 
                 Grid.Row="4" 
                 Grid.Column="2" 
                 Grid.ColumnSpan="2" 
                 Content="Рассчитать влажность" 
-                Command="{Binding CalculateMoistureSoilTestCommand}"
+                Command="{Binding CalculateWeakGrainsGravelTestCommand}"
                 VerticalContentAlignment="Center"
                 Margin="5"/>
         
@@ -133,7 +125,7 @@
                 Grid.Column="2" 
                 Grid.ColumnSpan="2" 
                 Content="Save" 
-                Command="{Binding SaveMoistureSoilTestCommand}"
+                Command="{Binding SaveWeakGrainsGravelTestCommand}"
                 VerticalContentAlignment="Center"
                 Margin="5"/>
     </Grid>
