--- a/Project/Views/UserControls/TestUserControls/Soil/RollingBoundarySoilTestUserControl.xaml
+++ b/Project/Views/UserControls/TestUserControls/Soil/RollingBoundarySoilTestUserControl.xaml
@@ -123,7 +123,7 @@
                 Grid.Row="4" 
                 Grid.Column="2" 
                 Grid.ColumnSpan="2" 
-                Content="Рассчитать влажность" 
+                Content="Рассчитать"
                 Command="{Binding CalculateRollingBoundarySoilTestCommand}"
                 VerticalContentAlignment="Center"
                 Margin="5"/>
