--- a/Project/Views/UserControls/TestUserControls/Soil/DensitySoilTestUserControl.xaml
+++ b/Project/Views/UserControls/TestUserControls/Soil/DensitySoilTestUserControl.xaml
@@ -131,7 +131,7 @@
                 Grid.Row="5" 
                 Grid.Column="2" 
                 Grid.ColumnSpan="2" 
-                Content="Рассчитать влажность" 
+                Content="Рассчитать" 
                 Command="{Binding CalculateDensitySoilTestCommand}"
                 VerticalContentAlignment="Center"
                 Margin="5"/>
